Update to Notebook file

--- a/Tesseract-OCR.ipynb
+++ b/Tesseract-OCR.ipynb
@@ -87,7 +87,13 @@
     "\n",
     "LASTNAME-eng.jpg\n",
     "\n",
-    "Please use PNG, JPG, or TIF formats only."
+    "Please use PNG, JPG, or TIF formats only.\n",
+    "\n",
+    "### Using JupyterHub\n",
+    "\n",
+    "Login to [https://tutorials-1.rcnyu.org](https://tutorials-1.rcnyu.org). From the main (root) folder, click on New >> Terminal. In the terminal, run:\n",
+    "\n",
+    "<code>git clone https://github.com/NYU-DataServices/RDM_tesseract_ocr.git</code>"
    ]
   },
   {
